# dsa-c

./: CMakeLists.txt  README.md
src/: main.c
src/ds/: dynamic_array.c  dynamic_array.h
src/problems/: basic_math.c  basic_math.h
